modules/k8s/env/k3s/gogs/02-frontal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
      tier: frontal
  template:
    metadata:
      labels:
        app: gogs
        tier: frontal
    spec:
      #serviceAccountName: jenkins-admin
      #securityContext:
      #fsGroup: 1000
      #runAsUser: 1000
      containers:
      - image: gogs/gogs
        imagePullPolicy: Always
        name: gogs
        ports:
        - containerPort: 3000
          name: 80tcp
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 45
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 45
          periodSeconds: 5
        volumeMounts:
        - mountPath: /data
          name: gogs-data
      volumes:
      - name: gogs-data
        persistentVolumeClaim:
          claimName: gogs-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - "k8s-master1"
                - "k8s-master2"
