modules/k8s/env/k3s/gogs/04-gogs-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs-db
  namespace: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs-db
      tier: database
  template:
    metadata:
      labels:
        app: gogs-db
        tier: database
    spec:
      #serviceAccountName: jenkins-admin
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
      - image: mariadb
        imagePullPolicy: Always
        name: gogs-db
        ports:
        - containerPort: 3306
          name: 3306tcp
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 45
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 45
          periodSeconds: 5
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: gogs-db
      volumes:
      - name: gogs-db
        persistentVolumeClaim:
          claimName: gogs-db
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - "k8s-master0"
                - "k8s-master2"
