modules/k8s/env/k3s/gogs/03-gogs-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-service-db
  namespace: gogs
spec:
  ports:
  - name: http
    port: 6000
    protocol: TCP
    targetPort: 3306
  selector:
    app: gogs-db
    tier: database
  type: ClusterIP
