modules/k8s/env/k3s/gogs/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs
spec:
  defaultBackend:
    service:
      name: gogs-service
      port:
        number: 80
  rules:
  - host: git.$domain_pro_stcs
    http:
      paths:
      - backend:
          service:
            name: gogs-service
            port:
              number: 80
        path: /
        pathType: Prefix
